# CAM_PERCEPTION

./: .gitignore  contributing.md  contributing2.md  requirements.lock.txt  requirements.txt
.github/workflows/: ci.yml
configs/: models.yaml  pipeline.yaml
data/samples/replay_min/meta/: frames.csv
docs/: CAMERA_LIVE_USAGE.md  ROS2_INTEGRATION.md  TL_TS_MODEL_INTEGRATION_GUIDE.md
logs/: instruction.md
ros2/src/cam_perception_bridge/: package.xml  setup.cfg  setup.py
ros2/src/cam_perception_bridge/cam_perception_bridge/: __init__.py  perception_node.py
ros2/src/cam_perception_bridge/launch/: perception.launch.py
scripts/: build_cam_perception_bridge.sh  healthcheck_main.sh  run_live.sh  run_replay.sh
src/perception_stack/: main.py  pipeline.py
src/perception_stack/capture/: __init__.py  opencv_source.py
src/perception_stack/common/: config.py  types.py
src/perception_stack/infer/: infer_engine.py
src/perception_stack/infer/detectors/: base.py  traffic_light.py  traffic_sign.py
src/perception_stack/projector/: projector.py
src/perception_stack/publisher/: publisher.py
src/perception_stack/stabilizer/: stabilizer.py
src/perception_stack/sync/: dummy_sync.py  sync_manager.py
src/perception_stack/tracker/: tracker2d.py
src/perception_stack/visualizer/: visualizer.py
tools/: export_onnx.py
