<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- cam_perception_bridge：ROS2 包元数据；ament_python 构建 -->
<package format="3">
  <name>cam_perception_bridge</name>
  <version>0.1.0</version>
  <description>Bridge CAM_PERCEPTION Python stack to ROS2 (vision_msgs detections).</description>
  <maintainer email="dev@example.com">CAM_PERCEPTION</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
